[package]
name = "smart-read"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "Complex but easy ways to read user input"
repository = "https://github.com/What42Pizza/rust-smart-read"
readme = "readme.md"
keywords = ["stdin", "io", "read", "input"]
categories = ["command-line-interface"]
