[package]
name = "smart-read"
version = "0.9.0"
edition = "2024"
license = "MIT"
description = "Complex but easy ways to read user input"
repository = "https://github.com/What42Pizza/rust-smart-read"
readme = "readme.md"
keywords = ["read", "prompt", "input", "cli", "stdin"]
categories = ["command-line-interface"]
